[package]
name = "chmod-bpf"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]
description = "Managing BPF device permissions on macOS"
repository = "https://github.com/shellrow/chmod-bpf"
readme = "README.md"
license = "MIT"

# https://github.com/ogham/rust-users/issues/55
#[profile.dev]
#debug-assertions = false

[package.metadata.packager]
before-packaging-command = "cargo build --release"
authors = ["shellrow <shellrow@fortnium.com>"]
identifier = "com.fortnium.chmod-bpf"
version = "0.1.0"
license_file = "LICENSE"
category = "Developer Tool"
copyright = "Copyright (c) shellrow 2024. All rights reserved."
description = "Managing BPF device permissions on macOS"
long_description = "Managing BPF device permissions on macOS"

[dependencies]
#users = "0.11"
uzers = "0.11"
glob = "0.3"
privilege = "0.3"
clap = { version = "4.4", features = ["cargo"] }
log = "0.4"
env_logger = "0.11"
inquire = "0.6"
