[package]
name = "chmod-bpf"
version = "0.5.0"
edition = "2024"
authors = ["shellrow <shellrow@foctal.com>"]
description = "Managing BPF device permissions on macOS"
repository = "https://github.com/shellrow/chmod-bpf"
homepage = "https://github.com/shellrow/chmod-bpf"
documentation = "https://github.com/shellrow/chmod-bpf"
readme = "README.md"
license = "MIT"

# https://github.com/ogham/rust-users/issues/55
#[profile.dev]
#debug-assertions = false

[dependencies]
anyhow = { version = "1" }
chrono = { version = "0.4" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["time", "chrono", "env-filter"] }
uzers = "0.12"
clap = { version = "4.5", features = ["derive", "cargo"] }
inquire = "0.9"
termtree = { version = "0.5" }
anstyle = "1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.7"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
